Update uri in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://root:root@telusko.ambouso.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=telusko
+spring.data.mongodb.uri=mongodb+srv://root:<password>@<Database Name>.ambouso.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=<Database Name>
 
 
 
